# hwz-data

./: .env.sample  .gitignore  Makefile  README.md  main.py  owo.py  pdf_analyzer.py  pyproject.toml  requirements.txt  scrape.py  selenium_automation.py
.github/workflows/: dl.yaml
